--- a/src/sat.html
+++ b/src/sat.html
@@ -11,18 +11,7 @@
   </head>
 
   <body ng-app="kripkeBuilder" ng-controller="KripkeController">
-    <nav class="navbar navbar-default navbar-static-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">Kripke Builder</a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="http://github.com/thpani/kripkebuilder">About</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <kripke-nav mod="'sat'"></kripke-nav>
 
     <div class="container-fluid">
       <div class="row">
